# ifctf-2023-quals-challs

./: .gitignore
crypto/baby_oracle/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt
crypto/baby_oracle/solve/: solve.py
crypto/grown_oracle/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt  key
crypto/grown_oracle/sol/: sol.py
crypto/random/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt
crypto/random/sol/: RecoverSeed.py  mersenne_partial_input.py  sol.py
misc/typo/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt
misc/typo/solve/: solve.py
misc/typo/src/: server.py
pwn/emojifier/: Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt  health_check.py
pwn/emojifier/src/: file.c
pwn/jitland/: .gitignore  Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt
pwn/jitland/challenge-src/: Cargo.toml  exp.py
pwn/jitland/challenge-src/src/: client.rs
pwn/pureland/: challenge_template.yml  docker-compose.yml  flag.txt
pwn/pureland/src/: exp.py  healthcheck.py
pwn/relocsaas/: .gitignore  challenge_template.yml  docker-compose.yml  run.sh  x.py
pwn/relocsaas/chall/: compile.sh  explog.txt  exploitelf  flag_real.elf  gen_elf32_exploit.c  gen_elf32_flag.c  (+2 more)
rev/lambda_lambda_lambda/: challenge_template.yaml  flag.txt
rev/wireless_communication/: .gitignore  challenge_template.yml  flag.txt
web/flagify3/: .gitignore  Dockerfile  challenge_template.yml  docker-compose.yml  flag.txt
web/proxed/: challenge_template.yml  docker-compose.yml  flag.txt
(+18 files in other folders)
