[package]
name = "whatif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# solana_rbpf = { path = "/Users/nicola/vettocon/rbpf-upstream" }
solana_rbpf = "0.4.0"
syscalls = { version = "0.6.12", default-features = false }
pwn = { git = "https://github.com/clubby789/pwntools" }
hex = "0.4.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
